Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ literatureReview.aux
 literatureReview.log
 literatureReview.pdf
 literatureReview.synctex.gz
+literatureReview.fdb_latexmk
+literatureReview.fls
